--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "dev": "deno run --watch main.ts",
-    "start": "deno --allow-env --allow-read --allow-write --allow-run --allow-net main.ts --watch"
+    "start": "deno run -A main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
