--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "dev": "deno run --watch main.ts",
-    "start": "deno run -A main.ts"
+    "start": "deno run main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
